tests/sumo/spec/distribution/errors/speedDev_invalid/output.sumo
Loading net-file from 'net.net.xml'... done (1ms).
Loading done.
